unpackaged/main/default/objects/SFCPQ_Fields_Mapping_Settings__mdt/SFCPQ_Fields_Mapping_Settings__mdt.object-meta.xml
<CustomObject>
    <label>SFCPQ Fields Mapping Settings</label>
    <pluralLabel>SFCPQ Fields Mapping Settings</pluralLabel>
</CustomObject>