unpackaged/main/default/objects/SFCPQ_Fields_Mapping_Settings__mdt/fields/Opportunity_ID_Field_API_Name__c.field-meta.xml
<CustomField>
    <fullName>Opportunity_ID_Field_API_Name__c</fullName>
    <label>Opportunity ID Field API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>