unpackaged/main/default/objects/SFCPQ_Fields_Mapping_Settings__mdt/fields/SF_SObject_API_Name__c.field-meta.xml
<CustomField>
    <fullName>SF_SObject_API_Name__c</fullName>
    <label>SF SObject API Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>